# SO_ChompChamps

./: .gitignore
TP/: .bash_history  .gitignore  CMakeLists.txt  ChompChamps  Makefile  main.c  master  player  player_greedy  player_rapan  strace_out  view
TP/FilesC/: master.c  view.c
TP/FilesH/: master.h  player.h  view.h
TP/include/: ai.h  args.h  common.h  commons.h  master.h  player.h  sync.h  util.h  view.h
TP/src/: ai.c  args.c  common.c  master.c  player.c  sync.c  util.c  view.c
